trigger/event-listener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-listener
  name: el-github-listener
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-event-listener-product-api
    weight: 100
  wildcardPolicy: None
